@@ -887,6 +887,7 @@ DISSECTOR_SRC = \
 	packet-loop.c		\
 	packet-lpd.c		\
 	packet-lsc.c		\
+	packet-lsd.c		\
 	packet-ltp.c		\
 	packet-lwapp.c		\
 	packet-lwm.c		\
